<resources>
    <string name="app_name">Rubiks Cube</string>
    <string name="author">amarghosh</string>
    <string name="randomize">Scramble</string>
    <string name="stop">Stop</string>
    <string name="solve">Solve</string>
    <string name="cancel">Cancel</string>
    <string name="reset_settings">Reset</string>
    <string name="play">Play</string>
    <string name="undo">Undo</string>

    <string name="lock_faces">Cube</string>
    <string name="unlock_faces">Face</string>

    <string name="cube_size">Cube size</string>
    <string name="cube_sizex">Cube width</string>
    <string name="cube_sizey">Cube height</string>
    <string name="cube_sizez">Cube depth</string>
    <string name="speed">Speed of animation</string>
    <string name="scrambling_count_label">Level</string>
    <string name="scrambling_count_details">number of scrambling rotations</string>

    <string-array name="scrambling_modes">
        <item>Instantaneous</item>
        <item>Animated</item>
    </string-array>

    <string-array name="speed_values">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>

    <string-array name="fragment_names">
        <item>Play</item>
        <item>Algorithms</item>
        <item>Fix my cube</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>

    <string name="disclaimer">
        The touch detection is not proper as you go deeper on Z axis.
        So if you want to rotate the back face, it would be easier to first bring it
        to the right or front and then rotate it. I\'m working on this issue and a fix will be
        available soon.
        \n\nYou can increase the cube size as much as you want. However, once you go beyond seven,
        it becomes harder to touch on the desired piece.
        \n\nAs mentioned above, machine-solving is implemented only for 3x3x3 cube.
        Fork me on github if you\'re interested in adding support for cubes of other dimensions.
        In case of any suggestions or queries, please create a ticket in github.
        \n\nhttps://github.com/amarghosh/rubiks-cube

    </string>

    <string name="help_title">Buttons and their meaning</string>

    <string name="drawer_open">Navigation open</string>
    <string name="drawer_close">Navigation close</string>

    <string name="new_game">New Game</string>
    <string name="new_game_details">
        Starts a new game. The number of initial rotations can be modified from the settings page
    </string>

    <string name="giveup">Some help, please!</string>
    <string name="giveup_details">
        Rolls back all moves made by the user so as to bring the cube back to its initial state, and
        plays back the moves made during original scrambling to reveal the solution.
    </string>

    <string name="auto_solve">Solve it</string>
    <string name="auto_solve_details">The &quot;app&quot; uses a naive algorithm to solve the cube.
        It takes more steps than necessary. Currently only 3x3x3 is supported.
    </string>

    <string name="rotate_mode">Rotate mode</string>
    <string name="rotate_mode_details">
        Toggle between rotating the whole cube or the touched face
    </string>

    <string name="help_title_mycube">My cube page</string>
</resources>
