<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amg.rubik.MainActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@android:color/darker_gray"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/randomizeButton"
            android:textAllCaps="true"
            android:text="@string/randomize"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/solveButton"
            android:textAllCaps="true"
            android:text="@string/solve"/>

        <ToggleButton
            android:id="@+id/btn_rotate_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/unlock_faces"
            android:textOn="@string/lock_faces"
            android:textAllCaps="true"
            />

        <ImageButton
            android:contentDescription="@string/undo"
            android:id="@+id/btn_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_revert"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cube_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>

</LinearLayout>
